# fermilatprogram

./: .gitignore  CHANGELOG.md  Generate_gconfig.py  LICENSE  MANIFEST.in  README.md  download.py  lkmulty.py  photon_analyzer.py  pyproject.toml  requirements.txt  test_installation.py
examples/: basic_usage.py
fermilatprogram/: Generate_gconfig.py  __init__.py  cleandir.py  download.py  gererate_initial_txt.py  lkmulty.py  sed_plotter.py
